Fixed header on small screen sizes

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -21,11 +21,11 @@
 
     // NOTE: Double check if OK. Else remove this + &#home
     margin-inline: auto;
-    max-width: 85vw;
 
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      font-size: 20vw;
     }
 
     &#home {
